// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useDatabaseSubscription hook > basic subscription with database query 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748759090884,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748759090884,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseSubscription hook > manually call refetch 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "Initial data at 1748759092252",
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "Initial data at 1748759092252",
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "Initial data at 1748759092253",
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseSubscription hook > manually call setData 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "initial data",
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "initial data",
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "manually set data",
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseSubscription hook > subscription handles database reference changes 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "queryCount": 0,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": null,
    "error": null,
    "loading": true,
    "queryCount": 1,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "Query executed 1 times with DB: true",
    "error": null,
    "loading": false,
    "queryCount": 1,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseSubscription hook > subscription responds to database changes 1`] = `
[
  {
    "data": null,
    "error": null,
    "hasTriggeredChange": false,
    "loading": true,
    "refetchCount": 0,
  },
  {
    "data": "Settings count: 0",
    "error": null,
    "hasTriggeredChange": false,
    "loading": false,
    "refetchCount": 0,
  },
  {
    "data": "Settings count: 0",
    "error": null,
    "hasTriggeredChange": true,
    "loading": false,
    "refetchCount": 1,
  },
]
`;

exports[`useDatabaseSubscription hook > subscription with complex database query 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "firstRecord": null,
      "recordCount": 0,
      "timestamp": 1748759093038,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseSubscription hook > subscription with dependencies that change 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "Query result for dependency: 1",
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "Query result for dependency: 1",
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "Query result for dependency: 1",
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "Query result for dependency: 2",
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseSubscription hook > subscription with multiple dependencies 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "Query result for deps: a-1",
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "Query result for deps: a-1",
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "Query result for deps: a-1",
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "Query result for deps: b-2",
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseSubscription hook > subscription with no dependencies uses empty array 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "data with no dependencies",
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseSubscription hook > subscription with query that returns null 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": null,
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseSubscription hook > subscription with query that throws error 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": null,
    "error": [Error: Database query failed],
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseSubscription hook > transition from data to failure 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "successful data",
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "successful data",
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "successful data",
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": null,
    "error": [Error: Query now fails],
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseSubscription hook > transition from failure to data 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": null,
    "error": [Error: Initial failure],
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": null,
    "error": [Error: Initial failure],
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": null,
    "error": [Error: Initial failure],
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": "recovered data",
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;
